src/style/laf.css
/* ... */
html,
body {
  background: transparent;
  box-sizing: border-box;
  color: #222426;
  cursor: default;
  display: flex;
  flex-direction: column;
  font: caption;
  margin: 0;
  padding: 0;
  user-select: none;
}

body * {
  box-sizing: border-box;
  text-align: start;
}

.browser-style {
  margin-bottom: 6px;
  text-align: left;
}

select.browser-style {
    font: caption;
    text-overflow: ellipsis;
}

body[data-laf="true"] select.browser-style {
    padding: 0 4px 0;
}

body[data-laf="true"]:not([data-os="mac"]) select.browser-style {
    height: 24px;
    border: 1px solid var(--color-btn-border);
    box-shadow: 0 0 0 0 transparent;
    outline: 0 !important;
    transition-duration: 250ms;
    transition-property: box-shadow, border;
    padding-inline-end: 24px;
    border-radius: 0;
    background-color: var(--color-btn-bkgd);
}

body[data-laf="true"][data-os="mac"] select.browser-style {
    height: 20px;
}

button,
select.browser-style {
    font: caption;
}

button {
    padding: 0px 8px;
    text-align: center;
}

button[disabled],
select.browser-style[disabled] {
    color: #999;
    opacity: 0.5;
}

body[data-laf="true"]:not([data-os="mac"]) button:not(.ae-button):not(.toolbar-button) {
    border: 1px solid var(--color-btn-border);
    box-shadow: 0 0 0 0 transparent;
    outline: 0 !important;
    transition-duration: 250ms;
    transition-property: box-shadow, border;
    border-radius: 3px;
    background-color: var(--color-btn-bkgd);
}

body[data-os="mac"] button:not(.ae-button):not(.toolbar-button),
body[data-os="mac"][data-laf="true"] select.browser-style {
    border-top: 1px solid #e7e7e7;
    border-right: 1px solid #e1e1e1;
    border-bottom: 1px solid #d4d4d4;
    border-left: 1px solid #e5e5e5;
    border-radius: 4.5px;
    box-shadow: 0px 1px 2px 0px var(--color-mac-btn-shadow);
    background: linear-gradient(to bottom, #fdfefd 0%, #f6f6f6 100%);
    color: black;
    font-weight: normal;
}

body[data-laf="true"]:not([data-os="mac"]) button:hover:not(.ae-button):not(.toolbar-button),
body[data-laf="true"]:not([data-os="mac"]) select.browser-style:hover {
    background-color: var(--color-btn-hover-bkgd);
}

body[data-laf="true"]:not([data-os="mac"]) button:active:not(.ae-button):not(.toolbar-button),
body[data-laf="true"]:not([data-os="mac"]) select.browser-style:active {
    background-color: var(--color-btn-active-bkgd);
}

body[data-laf="true"]:not([data-os="mac"]) button.default:not(.ae-button):not(.toolbar-button) {
    border: 2px solid #0060df;
    border-radius: 3.5px;
}

body[data-os="mac"] button.default:active,
body[data-os="mac"] button:active:not(.ae-button):not(.toolbar-button) {
    background: linear-gradient(to bottom, #4B91FF 0%, #0050DC 100%);
    border: 0.5px solid #2F7FFF;
}

body[data-os="mac"] button:not(.ae-button):not(.toolbar-button) {
    border-radius: 4.5px;
}

body[data-os="mac"][data-laf="true"] select.browser-style {
    border-radius: 2px;
}

button.default {
    font-weight: 600;
}

body[data-os="mac"] button.default:not(.ae-button):not(.toolbar-button) {
    border-top: 1px solid #6fa6f9;
    border-right: 1px solid #2d7efd;
    border-bottom: 1px solid #0768ff;
    border-left: 1px solid #3d89fc;
    border-radius: 4.5px;
    box-shadow: 0px 1px 2px 0px var(--color-mac-btn-shadow);
    background: linear-gradient(to bottom, #88B6FA 0%, #0364FF 100%);
    color: -moz-dialog;
    font-weight: normal;
}

body[data-os="mac"] button.default:active:not(.ae-button):not(.toolbar-button) {
    background: linear-gradient(to bottom, #4B91FF 0%, #0050DC 100%);
    border: 0.5px solid #2F7FFF;
}

select.browser-style:focus,
select.browser-style:focus > option {
    color: var(--color-btn-text);
}

select:-moz-focusring {
    outline-style: none;
}

input[type="text"],
input[type="password"],
textarea {
    padding-left: 8px;
    padding-right: 8px;
}

input[type="text"],
input[type="password"],
input[type="search"],
textarea {
    border: 1px solid var(--color-tb-border);
    background-color: var(--color-tb-bkgd);
    font: caption;
    color: var(--color-tb-text);
}

input[type="text"]:hover,
input[type="password"]:hover,
input[type="search"]:hover,
textarea:hover {
    border-color: var(--color-tb-hover-border);
}

input[type="text"]:focus,
input[type="password"]:focus,
input[type="number"]:focus,
input[type="search"]:focus,
textarea:focus {
    border-color: #0a84ff;
    box-shadow: 0 0 0 2px #61b5ffbf;
    transition-duration: 250ms;
    transition-property: box-shadow;
}

input[type="text"]:-moz-focusring,
input[type="password"]:-moz-focusring,
input[type="number"]:-moz-focusring,
input[type="search"]:-moz-focusring,
textarea:-moz-focusring {
    outline-style: none;
}

input[type="text"]::selection,
input[type="password"]::selection,
input[type="search"]::selection,
textarea::selection {
    background-color: var(--color-tb-selection);
}

body[data-laf="true"] .browser-style > input[type="checkbox"] {
    appearance: none;
    border: 1px solid var(--color-cb-border);
    background-color: var(--color-cb-bkgd);
    vertical-align: -36%;
}

body[data-laf="true"][data-os="win"] .browser-style > input[type="checkbox"] {
    vertical-align: text-bottom;
}

body[data-laf="true"] .browser-style > input[type="checkbox"]:hover,
body[data-laf="true"] .browser-style.hover > input[type="checkbox"]:not(:active) {
    background-color: var(--color-cb-hover-bkgd);
    border-color: var(--color-cb-hover-border);
}

body[data-laf="true"] .browser-style > input[type="checkbox"]:hover:active:not(:disabled),
body[data-laf="true"] .browser-style.pressed > input[type="checkbox"]:not(:active):not(:disabled) {
    background-color: var(--color-cb-active-bkgd);
    border-color: var(--color-cb-hover-border);
    border-width: 2px;
}
/* ... */

